--- a/package.json
+++ b/package.json
@@ -4,12 +4,16 @@
   "description": "Generate miragejs code based on an OpenAPI Specification",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "dot": "^1.1.3",
+    "json-schema-faker": "^0.5.0-rc23",
+    "prettier": "^1.19.1",
     "swagger-parser": "^8.0.1"
   }
 }
