--- a/package.json
+++ b/package.json
@@ -7,12 +7,17 @@
     "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "bin": {
+    "miragejs-open-api": "index.js"
+  },
   "keywords": [],
   "author": "",
   "license": "MIT",
   "dependencies": {
     "dot": "^1.1.3",
+    "fs-extra": "^8.1.0",
     "json-schema-faker": "^0.5.0-rc23",
+    "minimist": "^1.2.0",
     "prettier": "^1.19.1",
     "swagger-parser": "^8.0.1"
   }
