--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "dot": "^1.1.3",
     "fs-extra": "^8.1.0",
     "json-schema-faker": "^0.5.0-rc23",
-    "minimist": "^1.2.0",
     "prettier": "^1.19.1",
-    "swagger-parser": "^8.0.1"
+    "swagger-parser": "^8.0.1",
+    "yargs": "^15.0.2"
   }
 }
