--- a/package.json
+++ b/package.json
@@ -5,7 +5,17 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint .",
+    "format": "prettier ./**/*.js --write"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.js": "npm run format && npm run lint"
   },
   "bin": {
     "miragejs-open-api": "./index.js"
@@ -20,5 +30,11 @@
     "prettier": "^1.19.1",
     "swagger-parser": "^8.0.1",
     "yargs": "^15.0.2"
+  },
+  "devDependencies": {
+    "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.8.0",
+    "husky": "^3.1.0",
+    "lint-staged": "^9.5.0"
   }
 }
