infra: trigger cache reload

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,8 +11,9 @@ jobs:
 
       - restore_cache:
           keys:
-            - v1-dependencies-{{ checksum "package.json" }}
-            - v1-dependencies-
+            - cache-clear-deps
+            # - v1-dependencies-{{ checksum "package.json" }}
+            # - v1-dependencies-
 
       - run: npm install
 
