--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,9 +11,8 @@ jobs:
 
       - restore_cache:
           keys:
-            - cache-clear-deps
-            # - v1-dependencies-{{ checksum "package.json" }}
-            # - v1-dependencies-
+            - v1-dependencies-{{ checksum "package.json" }}
+            - v1-dependencies-
 
       - run: npm install
 
