--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint ./src/**/*.js",
     "format": "prettier src/**/*.js --write"
   },
+  "test-abcd": "clearcache",
   "husky": {
     "hooks": {
       "pre-commit": "lint-staged"
