feat: add initial import solver
feat: add initial import solver

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,5 +1,8 @@
 {
-  "extends": ["eslint:recommended", "prettier"],
+  "extends": [
+    "eslint:recommended",
+    "prettier"
+  ],
   "env": {
     "node": true,
     "jest/globals": true
@@ -8,5 +11,11 @@
   "parserOptions": {
     "ecmaVersion": 2017,
     "sourceType": "module"
+  },
+  "rules": {
+    "semi": "error",
+    "prefer-template": "error",
+    "comma-dangle": ["error", "always-multiline"],
+    "quotes": ["error", "double", "avoid-escape"]
   }
 }
