--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node index.js",
     "test": "jest",
     "lint": "eslint ./src/**/*.js",
-    "format": "prettier src/**/*.js --write"
+    "format": "prettier-eslint $PWD'/src/**/*.js' --write"
   },
   "test-abcd": "clearcache",
   "husky": {
@@ -32,6 +32,7 @@
     "dot": "^1.1.3",
     "fs-extra": "^8.1.0",
     "json-schema-faker": "^0.5.0-rc23",
+    "lodash.uniq": "^4.5.0",
     "prettier": "^1.19.1",
     "swagger-parser": "^8.0.1",
     "yargs": "^15.0.2"
