--- a/package.json
+++ b/package.json
@@ -5,7 +5,22 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "lint": "eslint ./src/**/*.js",
+    "format": "prettier src/**/*.js --write"
+  },
+  "test-abcd": "clearcache",
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.js": [
+      "npm run format",
+      "npm run lint",
+      "git add"
+    ]
   },
   "bin": {
     "miragejs-open-api": "./index.js"
@@ -20,5 +35,16 @@
     "prettier": "^1.19.1",
     "swagger-parser": "^8.0.1",
     "yargs": "^15.0.2"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.7.7",
+    "@babel/preset-env": "^7.7.7",
+    "babel-jest": "^24.9.0",
+    "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.8.0",
+    "eslint-plugin-jest": "^23.1.1",
+    "husky": "^3.1.0",
+    "jest": "^24.9.0",
+    "lint-staged": "^9.5.0"
   }
 }
