--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "start": "node index.js",
     "test": "jest",
-    "lint": "eslint ./src/**/*.js",
-    "format": "prettier-eslint $PWD'/src/**/*.js' --write"
+    "lint": "eslint .",
+    "format": "prettier-eslint --write"
   },
   "test-abcd": "clearcache",
   "husky": {
@@ -46,6 +46,7 @@
     "eslint-plugin-jest": "^23.1.1",
     "husky": "^3.1.0",
     "jest": "^24.9.0",
-    "lint-staged": "^9.5.0"
+    "lint-staged": "^9.5.0",
+    "prettier-eslint-cli": "^5.0.0"
   }
 }
