infra: add pre-push hook

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "test-abcd": "clearcache",
   "husky": {
     "hooks": {
-      "pre-commit": "lint-staged"
+      "pre-commit": "lint-staged",
+      "pre-push": "npm test"
     }
   },
   "lint-staged": {
