--- a/package.json
+++ b/package.json
@@ -6,13 +6,14 @@
   "scripts": {
     "start": "node index.js",
     "test": "jest",
-    "lint": "eslint ./src/**/*.js",
-    "format": "prettier-eslint $PWD'/src/**/*.js' --write"
+    "lint": "eslint .",
+    "format": "prettier-eslint --write"
   },
   "test-abcd": "clearcache",
   "husky": {
     "hooks": {
-      "pre-commit": "lint-staged"
+      "pre-commit": "lint-staged",
+      "pre-push": "npm test"
     }
   },
   "lint-staged": {
@@ -21,6 +22,9 @@
       "npm run lint",
       "git add"
     ]
+  },
+  "jest": {
+    "setupFilesAfterEnv": ["jest-extended"]
   },
   "bin": {
     "miragejs-open-api": "./index.js"
@@ -46,6 +50,8 @@
     "eslint-plugin-jest": "^23.1.1",
     "husky": "^3.1.0",
     "jest": "^24.9.0",
-    "lint-staged": "^9.5.0"
+    "jest-extended": "^0.11.2",
+    "lint-staged": "^9.5.0",
+    "prettier-eslint-cli": "^5.0.0"
   }
 }
