--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     ]
   },
   "jest": {
-    "setupFilesAfterEnv": ["jest-extended"]
+    "setupFilesAfterEnv": [
+      "jest-extended"
+    ]
   },
   "bin": {
     "miragejs-open-api": "./index.js"
@@ -34,7 +36,9 @@
   "license": "MIT",
   "dependencies": {
     "dot": "^1.1.3",
+    "faker": "^4.1.0",
     "fs-extra": "^8.1.0",
+    "jest": "^24.9.0",
     "json-schema-faker": "^0.5.0-rc23",
     "lodash.uniq": "^4.5.0",
     "prettier": "^1.19.1",
@@ -46,10 +50,9 @@
     "@babel/preset-env": "^7.7.7",
     "babel-jest": "^24.9.0",
     "eslint": "^6.8.0",
-    "eslint-config-prettier": "^6.8.0",
-    "eslint-plugin-jest": "^23.1.1",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-jest": "^23.18.0",
     "husky": "^3.1.0",
-    "jest": "^24.9.0",
     "jest-extended": "^0.11.2",
     "lint-staged": "^9.5.0",
     "prettier-eslint-cli": "^5.0.0"
